--- a/Frontend/src/app/globals.css
+++ b/Frontend/src/app/globals.css
@@ -14,7 +14,7 @@
   h3,
   h4,
   h5 {
-    @apply uppercase font-heading;
+    @apply font-heading uppercase;
   }
 
   h1 {
@@ -32,13 +32,4 @@
   h5 {
     @apply text-xl;
   }
-}
-
-.no-scrollbar::-webkit-scrollbar {
-  display: none;
-}
-
-.no-scrollbar {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
 }
